@@ -66,6 +66,7 @@ next version - not released yet
 ! Ticket #4082, Fullscreen window was misplaced sometimes after monitor mode autochange
 ! Ticket #4116, "Snap to desktop edges" option wasn't working correctly
 ! Ticket #4128, Moving mouse over tooltips in fullscreen hid the toolbar under some circumstances
+! Ticket #4141, Subtitles were incorrectly displayed in DVD and DVB mode when using internal subtitle renderer and madVR
 
 
 1.7.3 - 02 February 2014
